Fix calendar today/go button sometimes get misaligned in the sidebar

--- a/calendar/templates/default/app.css
+++ b/calendar/templates/default/app.css
@@ -97,7 +97,7 @@
 
 #calendar-sidebox_header_go,
 #calendar-sidebox_header_today {
-	position: absolute;
+	position: absolute !important;
 	width: 12.0px;
 	height: 12.0px;
 	top: 28px;
