--- a/calendar/templates/mobile/app.css
+++ b/calendar/templates/mobile/app.css
@@ -118,7 +118,7 @@
 }
 #calendar-sidebox_header_go,
 #calendar-sidebox_header_today {
-  position: absolute;
+  position: absolute !important;
   width: 12.0px;
   height: 12.0px;
   top: 28px;
@@ -2146,7 +2146,7 @@ e.g. the div with class calendar_calTimeGrid is generated by the timeGridWidget 
      *  border-color: depending on category
      *  background: depending on category (shade)
      */
-  background-color: #679fd2;
+  background-color: #679FD2;
   border-top: 1px solid;
 }
 .calendar_calEvent:not([class*=" cat_"]) {
