--- a/calendar/templates/pixelegg/app.css
+++ b/calendar/templates/pixelegg/app.css
@@ -106,7 +106,7 @@
 }
 #calendar-sidebox_header_go,
 #calendar-sidebox_header_today {
-  position: absolute;
+  position: absolute !important;
   width: 12.0px;
   height: 12.0px;
   top: 28px;
@@ -1515,8 +1515,8 @@ img.calendar_print_appicon {
 #calendar-list {
   /* Keeps the scrollbar in the window in chrome */
   margin-right: 10px;
-  /* Prevents going to far down (off bottom)*/
-  height: calc(100% - 75px);
+  /* Prevents going to far down  (off bottom)*/
+  height: calc(25%);
 }
 #calendar_sidebox_content .egw_fw_ui_category_content {
   padding-left: 0px !important;
@@ -2134,7 +2134,7 @@ e.g. the div with class calendar_calTimeGrid is generated by the timeGridWidget 
      *  border-color: depending on category
      *  background: depending on category (shade)
      */
-  background-color: #679fd2;
+  background-color: #679FD2;
   border-top: 1px solid;
 }
 .calendar_calEvent:not([class*=" cat_"]) {
